--- a/src/template.html
+++ b/src/template.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset='UTF-8'>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>Restaurant Page (The Odin Project)</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <button class='nav-links'>Home</button>
+            <button class='nav-links'>Menu</button>
+            <button class='nav-links'>About</button>
+            <button class='nav-links'>Contact</button>
+        </nav>
+    </header>
+    <div id='content'>
+        <div id="content-container">
+            
+        </div>    
+    </div>
 </body>
 </html>
