Create Home, Menu(Appetizers)
Initialize home page with content.
Create sub menu options and dynamic sub menu output
for appetizers.

--- a/src/template.html
+++ b/src/template.html
@@ -8,16 +8,14 @@
 <body>
     <header>
         <nav>
-            <button class='nav-links'>Home</button>
-            <button class='nav-links'>Menu</button>
-            <button class='nav-links'>About</button>
-            <button class='nav-links'>Contact</button>
+            <button class='nav-links' id="home">Home</button>
+            <button class='nav-links' id="menu">Menu</button>
+            <button class='nav-links' id="about">About</button>
+            <button class='nav-links' id="contact">Contact</button>
         </nav>
     </header>
-    <div id='content'>
-        <div id="content-container">
-            
-        </div>    
+    <div class='content'>
+        
     </div>
 </body>
 </html>
