--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset='UTF-8'>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>Restaurant Page (The Odin Project)</title>
 <script defer src="main.js"></script></head>
 <body>
-    
+    <header>
+        <nav>
+            <button class='nav-links' id="home">Home</button>
+            <button class='nav-links' id="menu">Menu</button>
+            <button class='nav-links' id="contact">Contact</button>
+        </nav>
+    </header>
+    <div class='content'>
+        
+    </div>
 </body>
 </html>
